Attempted fix for parallax (no mobile), Set logo to the left on Mobile, Centered footer

--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -5,8 +5,6 @@
     margin: 0 0 0 0;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
     overflow-x: visible; 
 }
 
@@ -46,5 +44,12 @@
     .banner-text-container-homepage {
         width: 660px;
         margin: auto;
+    }
+}
+
+@media (min-width: 960px) {
+    .banner-container {
+        background-attachment: fixed;
+        background-repeat: no-repeat;
     }
 }
