--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -12,11 +12,20 @@
     padding: 0 80px 0 80px;
     background-color: #3B4956;
     font-family: 'Amiri', serif;
-    
 }
+
+
 
 @media (max-width: 576px) {
     .footer {
-        padding: 0 20px 0 20px;
+        display: flex;
+        flex-direction: row;        
+        text-align: center;
+        padding: 0;
+    }
+
+    .footer-text {
+        width: 100%;
+        text-align: center;
     }
 }
